修改红色下划线报错异常

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,5 +6,5 @@
         "D:\\Tensorflow\\tfen\\Lib\\site-packages"
     ],
     "python.autoComplete.addBrackets": true,
-
+    "python.linting.pylintArgs": ["--generate -members"]
 }
